--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -10,5 +10,20 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
 
+#info-box > * {
+  margin: 10px 20px;
+  padding: 10px;
+}
+
+#info-box > button {
+  outline: none;
+  border: 1px solid;
+  border-color: rgba(0, 0, 0, 0);
+  transition: all 0.2s;
+}
+
+#info-box > button:hover {
+  border-color: black;
 }
