Setup gameslice and settingsslice

--- a/src/components/Field.css
+++ b/src/components/Field.css
@@ -1,6 +1,8 @@
 /* Each grid field */
 .field {
-  border: 1px solid black;
+  /* border: 1px solid black; */
+  border-bottom: 1px solid black;
+  border-right: 1px solid black;
   transition: all 0.15s;
 
   display: flex;
