--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -1,7 +1,9 @@
 /* Board (grid wrapper) */
 #board {
   margin: 100px auto;
-  border: 1px solid black;
+  border-top: 1px solid black;
+  border-left: 1px solid black;
+
 
   width: 700px;
   height: 700px;
@@ -9,7 +11,7 @@
   max-height: 700px;
 
   display: grid;
-  gap: 1px;
+  /* gap: 1px; */
 
   overflow: scroll;
 }
