--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -4,16 +4,17 @@
   border-top: 1px solid black;
   border-left: 1px solid black;
 
-
   width: 700px;
   height: 700px;
   max-width: 700px;
   max-height: 700px;
 
   display: grid;
-  /* gap: 1px; */
-
-  overflow: scroll;
+  overflow: auto;
 }
 
-
+#board.placing {
+  
+  border: 2px solid orange;
+  
+}
