--- a/src/components/ShipLayer.css
+++ b/src/components/ShipLayer.css
@@ -3,7 +3,7 @@
   border: 1px solid black;
   border-radius: 100px;
   margin: 15px;
-  transition: background-color linear 0.1s;
+  transition: background-color linear 0.2s;
   cursor: pointer;
 }
 
@@ -17,8 +17,13 @@
 }
 
 .ship-creating {
-  background-color: rgb(242, 255, 0);
-  border: 1px solid yellow;
+  background-color: rgba(0, 255, 0, 0.5);
+  border: 1px solid green;
+}
+
+.ship-invalid {
+  background-color: rgba(255,0,0,0.4);
+  border: 1px solid red;
 }
 
 .ship:hover {
