--- a/src/components/Field.css
+++ b/src/components/Field.css
@@ -10,7 +10,8 @@
   align-items: center;
 
   cursor: pointer;
-
+  position: relative;
+  overflow: visible;
 }
 
 .field.disabled {
@@ -22,11 +23,14 @@
   background: #96969631;
 }
 
-
-/* 
-.clicked::after {
-  content: '🚢'
-} */
+.ui.label.field-label {
+  position: absolute;
+  width: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 2px 6px;
+}
 
 .coord {
   font-size: 0.8rem;
