prettier --write src/.

--- a/src/components/Field.css
+++ b/src/components/Field.css
@@ -15,7 +15,7 @@
 }
 
 .field.disabled {
-  background-color: rgba(0,0,0,0.15);
+  background-color: rgba(0, 0, 0, 0.15);
   pointer-events: none;
 }
 
