--- a/src/components/Field.css
+++ b/src/components/Field.css
@@ -26,10 +26,12 @@
 .ui.label.field-label {
   position: absolute;
   width: 18px;
+  height: 18px;
   display: flex;
+  padding: 0;
   align-items: center;
   justify-content: center;
-  padding: 2px 6px;
+  pointer-events: none;
 }
 
 .coord {
