--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -13,22 +13,18 @@ div.main-content {
   background-color: rgba(0, 0, 0, 0.05);
   margin-top: 6px;
   padding-bottom: 64px;
+  position: relative;
 }
 
-#info-box > * {
-  margin: 10px 20px;
-  padding: 10px;
+.info-box {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
 }
 
-#info-box > button {
-  outline: none;
-  border: 1px solid;
-  border-color: rgba(0, 0, 0, 0);
-  transition: all 0.2s;
-}
-
-#info-box > button:hover {
-  border-color: black;
+.info-box button {
+  margin-right: 0;
 }
 
 .add {
