--- a/src/components/Arsenal.css
+++ b/src/components/Arsenal.css
@@ -1,5 +1,59 @@
 .store {
   display: flex;
   align-items: center;
-  border: 1px solid red;
+
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.store .store-item {
+  position: relative;
+  transition: all 1s;
+}
+
+/* Override semantic ui */
+.store .ui.card:first-child {
+  margin-top: auto;
+}
+.store .ui.card:last-child {
+  margin-bottom: auto;
+}
+
+.store .store-item:hover {
+  /* cursor: pointer; */
+  top: -3px;
+}
+
+.store-item-icon,
+.store-item.description {
+  height: 100%;
+  width: 100%;
+  transition: all 0.2s;
+}
+
+.store-item-content-wrapper {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.store-item-icon {
+  font-size: 4rem;
+  width: fit-content;
+  height: fit-content;
+  /* margin: auto; */
+}
+.store-item-description {
+  opacity: 0;
+  position: absolute;
+  /* top: 0; */
+  text-align: center;
+}
+
+.store-item:hover .store-item-icon {
+  opacity: 0;
+}
+.store-item:hover .store-item-description {
+  opacity: 1;
 }
