--- a/src/components/Arsenal.css
+++ b/src/components/Arsenal.css
@@ -18,16 +18,21 @@
   margin-bottom: auto;
 }
 
+.store .store-item {
+  top: 0 !important;
+  transition: top 0.2s !important;
+  cursor: pointer;
+}
+
 .store .store-item:hover {
-  /* cursor: pointer; */
-  top: -3px;
+  top: -3px !important;
 }
 
 .store-item-icon,
 .store-item.description {
   height: 100%;
   width: 100%;
-  transition: all 0.2s;
+  transition: opacity 0.3s;
 }
 
 .store-item-content-wrapper {
@@ -42,12 +47,10 @@
   font-size: 4rem;
   width: fit-content;
   height: fit-content;
-  /* margin: auto; */
 }
 .store-item-description {
   opacity: 0;
   position: absolute;
-  /* top: 0; */
   text-align: center;
 }
 
