horizontal inventory and move labels to bottom bar

--- a/src/components/ActionBar.css
+++ b/src/components/ActionBar.css
@@ -12,4 +12,9 @@
 
 .info-box {
   display: flex;
+  justify-content: space-between;
+}
+
+.info-box .action-label {
+  line-height: 1.8 !important;
 }
