--- a/src/components/attack/PreviewField.css
+++ b/src/components/attack/PreviewField.css
@@ -8,9 +8,12 @@
   position: relative;
 
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   flex-direction: column;
+
+  text-align: center;
+  font-size: 12px;
 }
 
 .preview-field * {
