--- a/src/components/Inventory.css
+++ b/src/components/Inventory.css
@@ -1,6 +1,9 @@
 .inventory-wrapper {
-  right: 0;
   width: 100%;
+  background-color: rgba(255, 255, 0, 0.15);
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-radius: 6px;
+  padding: 6px;
 }
 
 .items-wrapper {
@@ -14,6 +17,8 @@
 
 .items-wrapper p {
   text-align: center;
+  line-height: 12px;
+  margin-top: 4px;
 }
 
 .inventory-item {
