--- a/src/components/attack/PreviewField.css
+++ b/src/components/attack/PreviewField.css
@@ -31,6 +31,11 @@
   background: rgba(0, 252, 0, 0.277);
 }
 
+.preview-field.oob {
+  background: grey;
+  pointer-events: none;
+}
+
 .preview-hit.sunk {
   color: red !important;
 }
